--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             padding-left: 20px;
         }
 
-        #firstColor {
+        h1 {
+            background-color: black;
+            padding: 10px;
             color: white;
         }
 
-        #secondColor {
+        h1 span {
             color: aqua;
         }
 
@@ -31,6 +33,7 @@
             text-align: center;
             margin-top: 5px;
             margin-bottom: 0px;
+            padding: 10px;
         }
 
         h3 {
@@ -38,16 +41,15 @@
             text-align: right;
             padding-right: 20px;
             margin-top: 5px;
+            padding: 10px;
+            text-decoration-line: underline;
         }
     </style>
 </head>
 
 <body>
-    <div>
-        <h1 id="firstColor">My</h1>
-        <h1 id="secondColor">Cloud</h1>
-    </div>
 
+    <h1>My<span>Cloud</span></h1>
     <h2>Completed Projects:</h2>
     <h3>Contact Us</h3>
 </body>
